--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
+
+    <title> Waysfood</title>
   </head>
   <body style="background-color: rgb(236, 237, 238);" >
     <div style="padding: 0; max-width: none; " id="root"></div>
